# test-tg-coordinate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.simple  Procfile  README.md  README_ОБНОВЛЕНИЕ_19_NOV.md  donors.db  fix_summary.md  pyproject.toml  requirements.txt  upload_media.py  ИСПРАВЛЕНИЯ_15_NOV_2025.md  ИТОГОВАЯ_СВОДКА_V1.3.2.md  ФИНАЛЬНАЯ_СВОДКА.md
.claude/: settings.local.json
.cursor/rules/: file_structure_document.mdc  tech_stack_document.mdc
.github/workflows/: ci.yml
docs/: DEPLOYMENT_FIXES.md  DEPLOYMENT_STATUS.md  DUPLICATE_FIX_V1.3.3.md  ENV_VARS.md  FINAL_DEPLOYMENT.md  FINAL_SUMMARY.md  FIREBASE_INTEGRATION.md  GPT-5.1_MIGRATION.md  GPT-5.1_PROPER_USAGE.md  KOYEB_FIX.md  KOYEB_SETUP.md  LIVE_LOCATION_V1.1.md  LOCATION_KEYBOARD_V1.2.md  MEDIA_SETUP.md  MODEL_UPDATE.md  PRD.md  PROMPT_IMPROVEMENTS.md  RAILWAY_OPTIMIZATION_PLAN.md  REASONING_LEVELS.md  UX_IMPROVEMENTS_V1.3.2.md  YANDEX_SEARCH_INTEGRATION.md  YANDEX_SEARCH_SUMMARY.md  YANDEX_SEARCH_TODO.md  file_structure_document.mdc  implementation_plan.mdc  tech_stack_document.mdc  МИГРАЦИЯ_МОДЕЛЕЙ_ИНСТРУКЦИЯ.md  НОВАЯ_СТРАТЕГИЯ_МОДЕЛЕЙ.md  ПОЧЕМУ_СЛОМАЛОСЬ.md
src/: __init__.py  main.py
src/handlers/: donations.py  language_selection.py  location.py
src/nearby_fact_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: test_claude_client.py  test_fact_accuracy_prompts.py  test_live_location_expiry.py  test_live_location_silence.py  test_live_location_tracker.py  test_location_handler.py  test_main.py  test_openai_client.py
(+20 files in other folders)
